deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: demo
          image: localhost:5000/demo
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "32Mi"
              cpu: "5m"
            limits:
              memory: "64Mi"
              cpu: "10m"
      restartPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: demo
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 3000
  selector:
    app: demo
