ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-site
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
      - henrytesting.co.uk
      - www.henrytesting.co.uk
      secretName: henry-staging-tls
  rules:
    - host: henrytesting.co.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: demo
              servicePort: 3000
    - host: www.henrytesting.co.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: demo
              servicePort: 3000
